# -WEB_hw9

./: README.md  authors_scrapy.json  data_processing.py  main.py  models.py  pyproject.toml  scrap_to_json.py  seeds.py
